// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Breadcrumbs component renders correctly 1`] = `
<div>
  <nav
    aria-label="breadcrumbs"
    class="MuiTypography-root MuiBreadcrumbs-root Breadcrumbs-root-1 MuiTypography-body1 MuiTypography-colorTextSecondary"
  >
    <ol
      class="MuiBreadcrumbs-ol"
    />
  </nav>
</div>
`;

exports[`Breadcrumbs component renders correctly only one item 1`] = `
<div>
  <nav
    aria-label="breadcrumbs"
    class="MuiTypography-root MuiBreadcrumbs-root Breadcrumbs-root-9 MuiTypography-body1 MuiTypography-colorTextSecondary"
  >
    <ol
      class="MuiBreadcrumbs-ol"
    />
  </nav>
</div>
`;
